feat(monitor): 优化设备 API 监控指标采集口径
- 新增 DeviceApiHttpServerMetricsFilterConfiguration 只采集设备 API 指标
- 新增 DeviceApiMetricsSupport 统一维护设备 API URI 规则
- 旧版 /fota/version/query URI 规范化为 /v1/upgrade/check
- PrometheusClient 使用 StandardCharsets.UTF_8
- Grafana 仪表盘和告警规则使用统一的 URI 过滤器
- 前端默认趋势范围改为 15m，图表样式优化